# pigeon

./: .gitignore  bun.lockb  package.json  svelte.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/application/ports/: http_client_repository.rs  mod.rs
src-tauri/src/application/services/: http_client_service.rs  mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: error.rs
src-tauri/src/domain/models/: request.rs  response.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/reqwest/: mod.rs  tests.rs
src-tauri/src/models/: request.rs  response.rs
src-tauri/src/reqwest/: mod.rs
src/lib/: utils.ts
src/lib/components/: Header.svelte  HeadersTab.svelte  MethodSelector.svelte  QueryParamsTab.svelte  RequestBodyTab.svelte  RequestBuilder.svelte  ResponseViewer.svelte  SendButton.svelte  UrlInput.svelte
src/lib/components/layout/: Header.svelte
src/lib/components/request/: HeadersTab.svelte  MethodSelector.svelte  QueryParamsTab.svelte  RequestBodyTab.svelte  RequestBuilder.svelte  SendButton.svelte  UrlInput.svelte
src/lib/components/response/: ResponseViewer.svelte
src/lib/components/shared/: KeyValueInput.svelte  MonacoEditor.svelte
src/lib/components/ui/select/: select-content.svelte
src/lib/constants/: index.ts
src/lib/stores/: request.svelte.ts
src/lib/types/: generated.ts  index.ts
src/routes/: +layout.svelte  +page.svelte
