[package]
name = "pigeon"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.40"
tracing-subscriber = "0.3"
tokio = { version = "1.39", features = ["full"] }
async-trait = "0.1"
snafu = "0.8.4"
http = "1.1.0"
reqwest = { version = "0.12.7", features = ["json", "multipart"] }
futures = "0.3"
bytes = "1.7"
mime = "0.3"

[dev-dependencies]
wiremock = "0.6.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
