[package]
name = "pigeon"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pigeon"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.40"
tracing-subscriber = "0.3"
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
snafu = "0.8.4"
http = "1.1.0"
reqwest = { version = "0.12.7", features = ["json", "multipart"] }
futures = "0.3"
bytes = "1.7"
mime = "0.3"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
ts-rs = { version = "9", features = ["serde-json-impl"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "generate-ts"
path = "src/bin/generate_ts.rs"
